# metrognome

./: .travis.yml  CMakeLists.txt  config.h.meson  main.c  meson.build  metrognome.ui  metronome.c  metronome.h
ci/: Dockerfile
